@@ -1,7 +1,0 @@
-package mod_perl;
-
-$VERSION = '1.13_01-dev';
-
-1;
-
-__END__
